<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:background="@color/light_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="2"
            android:textColor="@color/black"
            android:background="@drawable/bordes_textview"
            android:padding="10dp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/tvAirDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="2"
            android:textColor="@color/black"
            android:background="@drawable/bordes_textview"
            android:padding="10dp"
            android:text="@string/air_date" />

        <TextView
            android:id="@+id/tvEpisode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="2"
            android:textColor="@color/black"
            android:background="@drawable/bordes_textview"
            android:padding="10dp"
            android:text="@string/episodes" />

        <TextView
            android:id="@+id/tvCreated"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="2"
            android:textColor="@color/black"
            android:background="@drawable/bordes_textview"
            android:padding="10dp"
            android:text="@string/created" />

    </LinearLayout>

</LinearLayout>
